# host_manager

./: .gitignore  ADR-001-IMPLEMENTATION.md  AGENT.md  CLAUDE.md  Cargo.toml  LICENSE  PLANNING.md  README.md  RESEARCH-NETBOX-INFRAGRAPH.md  RESEARCH-VAULT-OPENBAO.md  RESEARCH.md  rust-toolchain.toml  wadm.yaml
.github/workflows/: ci.yml  release.yml
actors/agent-coordinator/: Cargo.toml  wasmcloud.toml
actors/agent-coordinator/wit/: world.wit
actors/api-gateway/: Cargo.toml  wasmcloud.toml
actors/api-gateway/src/: lib.rs
actors/api-gateway/wit/: world.wit
actors/credential-manager/: Cargo.toml  wasmcloud.toml
actors/credential-manager/wit/: world.wit
actors/discovery-orchestrator/: Cargo.toml  wasmcloud.toml
actors/discovery-orchestrator/src/: lib.rs
actors/discovery-orchestrator/wit/: world.wit
actors/endpoint-manager/: Cargo.toml  wasmcloud.toml
actors/endpoint-manager/wit/: world.wit
actors/identifier/: Cargo.toml  wasmcloud.toml
actors/identifier/wit/: world.wit
agent/: Cargo.toml
agent/src/: bootstrap.rs  commands.rs  heartbeat.rs  main.rs  transport.rs  update.rs
cli/: Cargo.toml
cli/src/: auth.rs  client.rs  main.rs
cli/src/commands/: discovery.rs  endpoints.rs  exec.rs  mod.rs
config/: nats.conf  openbao.hcl
config/tls/: server.crt
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  messages.rs  subjects.rs  vault_paths.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
deploy/charts/hostmgr/: Chart.yaml  values.yaml
deploy/charts/hostmgr/templates/: _helpers.tpl  deployment.yaml
deploy/docker-compose/: .env.example  docker-compose.yml
deploy/open-horizon/: service.definition.json
docs/adr/: 0000-template.md  0001-control-plane-architecture.md  0002-credential-storage-strategy.md  0003-network-discovery-strategy.md  0004-endpoint-identification-strategy.md  0005-agent-communication-protocol.md  0006-agent-deployment-strategy.md  0007-api-authentication-and-authorization.md  0008-endpoint-state-data-model.md  0009-configuration-and-packaging.md  0010-agent-lifecycle-management.md  0011-client-interface-strategy.md
providers/credentials/: Cargo.toml  wasmcloud.toml
providers/credentials/src/: main.rs
providers/discovery/: Cargo.toml  wasmcloud.toml
providers/discovery/src/: main.rs
providers/identification/: Cargo.toml  wasmcloud.toml
providers/identification/src/: main.rs
providers/mcp-client/: Cargo.toml  wasmcloud.toml
providers/mcp-client/src/: main.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: main.tsx  router.tsx
ui/src/components/: Layout.tsx  StatusBadge.tsx
ui/src/lib/: api.ts  utils.ts
ui/src/pages/: DashboardPage.tsx  DiscoveryPage.tsx  EndpointDetailPage.tsx  EndpointsPage.tsx  LoginPage.tsx
