[package]
name        = "api-gateway"
description = "WasmCloud actor — REST API, OAuth, API key auth, serves React UI"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
hostmgr-types    = { workspace = true }
hostmgr-protocol = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"] }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
