[package]
name        = "hostmgr-protocol"
description = "NATS subjects, message envelopes, and OpenBao path constants for Host Manager"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
repository.workspace = true

[dependencies]
hostmgr-types = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
