[package]
name        = "hostmgr-types"
description = "Shared domain types for Host Manager"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
repository.workspace = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
