[package]
name = "hostmgr-provider-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "provider-discovery"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasmcloud-provider-sdk.workspace = true
hostmgr-types.workspace = true
hostmgr-protocol.workspace = true
# Network scanning — tokio-native-tls for SSH, ipnetwork for CIDR parsing
ipnetwork = "0.20"
