[package]
name = "hostmgr-provider-identification"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "provider-identification"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
wasmcloud-provider-sdk.workspace = true
hostmgr-types.workspace = true
hostmgr-protocol.workspace = true
# SSH probe
russh = "0.45"
russh-keys = "0.45"
